fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -445,7 +445,7 @@ p {
   padding: 40px 0;
   text-align: center;
   color: rgb(200, 200, 200);
-  overflow: hidden;
+  overflow-x: hidden;
 }
 .about-title {
   color: rgb(178, 162, 61);
@@ -463,12 +463,11 @@ p {
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
-  top: 800px;
-  left: 150px;
+  top: 700px;
+  right: 100px;
   width: 100%;
   height: 300px;
   overflow: hidden;
-  background-repeat: no-repeat;
   opacity: 0.3;
   position: absolute;
   z-index: -1;
@@ -499,7 +498,7 @@ p {
   background-repeat: no-repeat;
   background-size: cover;
   border-radius: 20px;
-  width: 250px;
+  width: 200px;
   height: 340px;
   margin: 20px;
   color: rgb(178, 162, 61);
