--- a/scss/_games.scss
+++ b/scss/_games.scss
@@ -17,7 +17,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   border-radius: 20px;
-  width: 250px;
+  width: 200px;
   height: 340px;
   margin: 20px;
   color: $secondaryColor;
